my-nginx/nginx-ingress-fixed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-static-site-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-static-site-my-static-site
            port:
              number: 80
